--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
+    "node-fetch": "^3.3.2",
     "qrcode": "^1.5.4",
     "uuid": "^11.0.3"
   },
